// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all() - error when empty 1`] = `"Missing folder with name \\"/meta/random-type-123\\" or empty result"`;

exports[`all() - return 1 file 1`] = `
Array [
  Object {
    "content": "{\\"foo\\":\\"bar\\"}",
    "fileName": "/meta/text/key.json",
  },
]
`;

exports[`all() - return files from given folder 1`] = `
Array [
  Object {
    "content": "{\\"foo\\":\\"bar\\"}",
    "fileName": "/meta/text/key.json",
  },
  Object {
    "content": "{\\"foo\\":\\"baz\\"}",
    "fileName": "/meta/text/key2.json",
  },
]
`;

exports[`all() - return mulitiple files 1`] = `
Array [
  Object {
    "content": "{\\"foo\\":\\"bar\\"}",
    "fileName": "/meta/text/key.json",
  },
  Object {
    "content": "{\\"foo\\":\\"baz\\"}",
    "fileName": "/meta/text/key2.json",
  },
  Object {
    "content": "{\\"foo\\":\\"bazoooka\\"}",
    "fileName": "/meta/text/key3.json",
  },
]
`;
